# MAP

./: .gitignore  ARCHITECTURE.md  CREATE_STRATEGY_GUIDE.md  DHAN_INTEGRATION.md  MULTI_TENANCY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml
backend/: DATABASE_SETUP.md  DEPLOYMENT.md  README.md  SETUP_POSTGRES.md  UV_SETUP.md  config.py  pyproject.toml  requirements.txt  run.py
backend/api/: dependencies.py  main.py
backend/api/routes/: auth.py  broker_accounts.py  dashboard.py  orders.py  positions.py  risk.py  settings.py  strategies.py  tenants.py  trades.py  websocket.py
backend/broker/: __init__.py  base.py  dhan_adapter.py  factory.py
backend/database/: __init__.py  models.py  schemas.py  session.py
backend/risk_engine/: __init__.py  rules.py
backend/scripts/: create_example_strategies.py  migrate_broker_account_nullable.py
backend/strategies/: __init__.py  base.py  example_strategy.py
backend/trading_engine/: __init__.py  engine.py
backend/utils/: logger.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/orders/: page.tsx
frontend/app/dashboard/positions/: page.tsx
frontend/app/dashboard/risk/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/strategies/: page.tsx
frontend/app/dashboard/trades/: page.tsx
frontend/hooks/: useAuth.ts  useWebSocket.ts
frontend/lib/: api.ts
(+1 files in other folders)
